--- a/css/styles.scss
+++ b/css/styles.scss
@@ -66,7 +66,7 @@ footer {
   @media all and (max-width: 767px) {
     flex-direction: column;
     height: auto;
-    padding: 20px;
+    padding: 20px 20px 120px 20px;
 
     & > * {
       width: 100%;
@@ -329,7 +329,7 @@ section {
 
 // manu start
 nav {
-  @media all and (min-width: 767px) {
+  @media all and (min-width: 1000px) {
     max-width: inherit;
     position: fixed;
     top: 0;
@@ -362,8 +362,12 @@ nav {
   display: block;
   width: 105px;
   margin: 0 auto;
+  transition: opacity 180ms;
+  opacity: 1;
 
-  .logo {
+  &:hover {
+    transition: opacity 180ms;
+    opacity: 0.7;
   }
 
   img {
@@ -515,11 +519,15 @@ menu {
   height: 100px;
   box-shadow: 3px 0 15px rgba(14, 41, 74, 0.2);
   background-image: linear-gradient(180deg, #0e294a 0%, #000 100%);
-  display: flex;
+  display: none;
   align-items: flex-start;
   overflow-x: auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @media all and (max-width: 1000px) {
+    display: flex;
+  }
 
   &::-webkit-scrollbar {
     width: 0;
@@ -563,6 +571,11 @@ menu {
   margin-bottom: 20px;
   grid-gap: 15px;
 
+  @media all and (max-width: 767px) {
+    grid-gap: 10px;
+    flex-wrap: wrap;
+  }
+
   .main {
     img {
       height: 35px;
@@ -581,6 +594,10 @@ menu {
       height: 11px;
       background: url("../img/arrow_right_orange.svg") no-repeat center /
         contain;
+
+      @media all and (max-width: 767px) {
+        margin-right: 10px;
+      }
     }
 
     &:last-child {
@@ -596,6 +613,12 @@ menu {
     font-weight: 500;
     letter-spacing: 0.7px;
     line-height: 24px;
+    white-space: nowrap;
+
+    @media all and (max-width: 767px) {
+      font-size: 12px;
+      letter-spacing: 0.6px;
+    }
 
     &:hover {
       text-decoration: underline;
@@ -863,6 +886,94 @@ menu {
         grid-column-end: 5;
       }
     }
+  }
+}
+
+.mobile_products {
+  .title_block {
+    width: calc(50% - 10px);
+    margin-bottom: 10px;
+    height: 40px;
+    background-color: #0e294a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-family: "Lapsus Pro";
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 0.8px;
+
+    &::before {
+      width: 20px;
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 1;
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 100% 50%);
+      background-color: #f26522;
+    }
+  }
+
+  .product_link {
+    display: block;
+  }
+
+  .img_wrap {
+    height: calc(51.7vw - 34px);
+    margin-bottom: 10px;
+  }
+
+  p {
+    cursor: pointer;
+  }
+
+  .category {
+    margin-bottom: 6px;
+    color: #0e294a;
+    font-family: Montserrat;
+    font-size: 10px;
+    font-weight: 500;
+  }
+
+  .title {
+    color: #0e294a;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 12px;
+  }
+
+  .price {
+    color: #f26522;
+    font-family: "Lapsus Pro";
+    font-size: 25px;
+    font-weight: 700;
+
+    &::after {
+      content: " ₴";
+    }
+  }
+
+  .add_top_cart {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-family: "Lapsus Pro";
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.98px;
+    text-transform: uppercase;
+    width: 90px;
+    height: 30px;
+    border-radius: 4px;
+    background-color: #f26522;
   }
 }
 
