--- a/css/styles.css
+++ b/css/styles.css
@@ -2033,6 +2033,7 @@ menu {
   .breadcrumbs {
     grid-gap: 10px;
     flex-wrap: wrap;
+    max-width: 100vw;
   }
 }
 
@@ -2989,5 +2990,17 @@ menu {
   .map_wrap .map_info .delivery_info .delivery_line {
     display: block;
   }
+}
+
+.cart_wrap {
+  position: fixed;
+  z-index: 100;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 1108px;
+  height: 1080px;
+  box-shadow: -3px 0 15px rgba(14, 41, 74, 0.2);
+  background-color: #0e294a;
 }
 /*# sourceMappingURL=styles.css.map */
